<resources>
    <string name="app_name">Floricultura canto flores</string>
    <string name="nome_loja"><b><font color="#3F51B5">Floricultura</font></b> Canto flores</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_rua_numero">Rua e Número</string>
    <string name="hint_cidade_estado">Cidade e Estado</string>
    <string name="hint_celular">Celular</string>
    <string name="texto_botao_entrar">Entrar</string>
    <string name="texto_botao_cadastrar">Cadastrar</string>
    <string name="texto_tela_cadastro">Não tem uma conta? cadastre-se agora!</string>
    <string name="texto_botao_finalizar_pedido">Finalizar Pedido</string>
    <string name="texto_botao_fazer_pagamento">Fazer Pagamento</string>
    <string name="titulo_tela_cadastro">Faça seu Cadastro</string>
    <string name="texto_dialog_carregando">Carregando...</string>
    <string name="titulo_frase">Realizar sua compra conosco e desfrute de uma experiência de qualidade desde a seleção dos produtos até a entrega no caixa.</string>
    <string name="titulo_preco">Preço</string>
    <string name="titulo_tela_pagamento">Preencha todos os campos antes de fazer o pagamento</string>
    <string name="menu_item_perfil">Perfil</string>
    <string name="menu_item_pedidos">Pedidos</string>
    <string name="menu_item_deslogar">Sair da Sessão</string>
    <string name="texto_botao_deslogar">Sair</string>
    <string name="texto_tamanho_38">01</string>
    <string name="texto_tamanho_39">02</string>
    <string name="texto_tamanho_40">03</string>
    <string name="texto_tamanho_41">04</string>
    <string name="texto_tamanho_42">05</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="informe_seu_e_mail_que_enviaremos_num_link_para_altera_o_da_senha">Informe seu e-mail que enviaremos \num link para alteração da senha.</string>
    <string name="txt_recuperar_senha">Recuperar</string>
    <string name="txt_voltar">Voltar</string>
    <string name="j_recuperou_senha">Já recuperou senha ?</string>
    <string name="txt_n_o_tem_conta_ainda">Não tem conta ainda ?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="menu_sobre_o_aplicativo">Sobre o aplicativo</string>
    <string name="txt_celular">(31) 99609-8536</string>
    <string name="txt_email">floriculturacantodasrosas@gmail.com</string>
    <string name="txt_descricao">Esta política de Termos de Uso é válida a partir de May 2024.
TERMOS DE USO — Floricultura canto das rosas
Floricultura canto das rosas, pessoa jurídica de direito privado descreve, através deste documento, as regras de uso do site www.floriculturacantorosa.com e qualquer outro site, loja ou aplicativo operado pelo proprietário.

Ao navegar neste website, consideramos que você está de acordo com os Termos de Uso abaixo.

Caso você não esteja de acordo com as condições deste contrato, pedimos que não faça mais uso deste website, muito menos cadastre-se ou envie os seus dados pessoais.

Se modificarmos nossos Termos de Uso, publicaremos o novo texto neste website, com a data de revisão atualizada. Podemos alterar este documento a qualquer momento. Caso haja alteração significativa nos termos deste contrato, podemos informá-lo por meio das informações de contato que tivermos em nosso banco de dados ou por meio de notificações.

A utilização deste website após as alterações significa que você aceitou os Termos de Uso revisados. Caso, após a leitura da versão revisada, você não esteja de acordo com seus termos, favor encerrar o seu acesso.

Seção 1 - Usuário
A utilização deste website atribui de forma automática a condição de Usuário e implica a plena aceitação de todas as diretrizes e condições incluídas nestes Termos.

Seção 2 - Adesão em conjunto com a Política de Privacidade
A utilização deste website acarreta a adesão aos presentes Termos de Uso e a versão mais atualizada da Política de Privacidade de Floricultura canto das rosas.

Seção 3 - Condições de acesso
Em geral, o acesso ao website da Floricultura canto das rosas possui caráter gratuito e não exige prévia inscrição ou registro.

Contudo, para usufruir de algumas funcionalidades, o usuário poderá precisar efetuar um cadastro, criando uma conta de usuário com login e senha próprios para acesso.

É de total responsabilidade do usuário fornecer apenas informações corretas, autênticas, válidas, completas e atualizadas, bem como não divulgar o seu login e senha para terceiros.

Partes deste website oferecem ao usuário a opção de publicar comentários em determinadas áreas. Floricultura canto das rosas não consente com a publicação de conteúdos que tenham natureza discriminatória, ofensiva ou ilícita, ou ainda infrinjam direitos de autor ou quaisquer outros direitos de terceiros.

A publicação de quaisquer conteúdos pelo usuário deste website, incluindo mensagens e comentários, implica em licença não-exclusiva, irrevogável e irretratável, para sua utilização, reprodução e publicação pela Floricultura canto das rosas no seu website, plataformas e aplicações de internet, ou ainda em outras plataformas, sem qualquer restrição ou limitação.

Seção 4 - Cookies
Informações sobre o seu uso neste website podem ser coletadas a partir de cookies. Cookies são informações armazenadas diretamente no computador que você está utilizando. Os cookies permitem a coleta de informações tais como o tipo de navegador, o tempo despendido no website, as páginas visitadas, as preferências de idioma, e outros dados de tráfego anônimos. Nós e nossos prestadores de serviços utilizamos informações para proteção de segurança, para facilitar a navegação, exibir informações de modo mais eficiente, e personalizar sua experiência ao utilizar este website, assim como para rastreamento online. Também coletamos informações estatísticas sobre o uso do website para aprimoramento contínuo do nosso design e funcionalidade, para entender como o website é utilizado e para auxiliá-lo a solucionar questões relevantes.

Caso não deseje que suas informações sejam coletadas por meio de cookies, há um procedimento simples na maior parte dos navegadores que permite que os cookies sejam automaticamente rejeitados, ou oferece a opção de aceitar ou rejeitar a transferência de um cookie (ou cookies) específico(s) de um site determinado para o seu computador. Entretanto, isso pode gerar inconvenientes no uso do website.

As definições que escolher podem afetar a sua experiência de navegação e o funcionamento que exige a utilização de cookies. Neste sentido, rejeitamos qualquer responsabilidade pelas consequências resultantes do funcionamento limitado deste website provocado pela desativação de cookies no seu dispositivo (incapacidade de definir ou ler um cookie).

Seção 5 - Propriedade Intelectual
Todos os elementos de Floricultura canto das rosas são de propriedade intelectual da mesma ou de seus licenciados. Estes Termos ou a utilização do website não concede a você qualquer licença ou direito de uso dos direitos de propriedade intelectual da Floricultura canto das rosas ou de terceiros.

Seção 6 - Links para sites de terceiros
Este website poderá, de tempos a tempos, conter links de hipertexto que redirecionará você para sites das redes dos nossos parceiros, anunciantes, fornecedores etc. Se você clicar em um desses links para qualquer um desses sites, lembre-se que cada site possui as suas próprias práticas de privacidade e que não somos responsáveis por essas políticas. Consulte as referidas políticas antes de enviar quaisquer Dados Pessoais para esses sites.

Não nos responsabilizamos pelas políticas e práticas de coleta, uso e divulgação (incluindo práticas de proteção de dados) de outras organizações, tais como Facebook, Apple, Google, Microsoft, ou de qualquer outro desenvolvedor de software ou provedor de aplicativo, loja de mídia social, sistema operacional, prestador de serviços de internet sem fio ou fabricante de dispositivos, incluindo todos os Dados Pessoais que divulgar para outras organizações por meio dos aplicativos, relacionadas a tais aplicativos, ou publicadas em nossas páginas em mídias sociais. Nós recomendamos que você se informe sobre a política de privacidade e termos de uso de cada site visitado ou de cada prestador de serviço utilizado.

Seção 7 - Prazos e alterações
O funcionamento deste website se dá por prazo indeterminado.

O website no todo ou em cada uma das suas seções, pode ser encerrado, suspenso ou interrompido unilateralmente por Floricultura canto das rosas, a qualquer momento e sem necessidade de prévio aviso.

Seção 8 - Dados pessoais
Durante a utilização deste website, certos dados pessoais serão coletados e tratados por Floricultura canto das rosas e/ou pelos Parceiros. As regras relacionadas ao tratamento de dados pessoais de Floricultura canto das rosas estão estipuladas na Política de Privacidade.

Seção 9 - Contato
Caso você tenha qualquer dúvida sobre os Termos de Uso, por favor, entre em contato pelo e-mail floriculturacantodasrosa@gmail.com.
        \n\n
    </string>
    <string name="txt_politica_de_privacidade">Politica de Privacidade</string>
    <string name="txt_finalizou_pedido">Finalizou Pedido?</string>
    <string name="txt_informa_o">Infor</string>
</resources>