<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title=""
        android:icon="@drawable/ic_menu_lateral"
        app:showAsAction="always">

      <menu>

        <item
            android:id="@+id/perfil"
            android:title="@string/menu_item_perfil"
            android:icon="@drawable/ic_perfil"
            app:showAsAction="never"/>

          <item
              android:id="@+id/pedidos"
              android:title="@string/menu_item_pedidos"
              android:icon="@drawable/ic_pedidos"
              app:showAsAction="never"/>

          <item
              android:id="@+id/ajuda"
              android:title="@string/menu_ajuda"
              android:icon="@drawable/ic_ajuda"
              app:showAsAction="never"/>

          <item
              android:id="@+id/sobreApp"
              android:title="@string/menu_sobre_o_aplicativo"
              android:icon="@drawable/ic_sobre_app"
              app:showAsAction="never"/>

          <item
              android:id="@+id/infor"
              android:title="@string/txt_informa_o"
              android:icon="@drawable/ic_infor"
              app:showAsAction="never"/>

          <item
              android:id="@+id/deslogar"
              android:title="@string/menu_item_deslogar"
              android:icon="@drawable/ic_deslogar"
              app:showAsAction="never"/>

      </menu>

    </item>

</menu>