<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormLogin.FormLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/planta_aranha"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/nome_loja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_loja"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/container_formularios"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/container_formularios"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/nome_loja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:padding="15dp"
        android:hint="@string/hint_email"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="@id/container_formularios"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"/>

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:padding="15dp"
        android:hint="@string/hint_senha"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:inputType="numberPassword"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"/>

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_botao_entrar"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"/>


    <TextView
        android:id="@+id/btnRecuraSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingVertical="8dp"
        android:text="@string/recuperar_senha"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_formularios" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_n_o_tem_conta_ainda"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/txt_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingVertical="16dp"
            android:text="@string/cadastre_se"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />


    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/txt_tela_cadastro"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/texto_tela_cadastro"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:layout_editor_absoluteY="592dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>