<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.DetalhesProduto.DetalhesProduto">

    <ImageView
        android:id="@+id/dt_fotoProduto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/black"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/dt_nomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_frase"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_preco"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/dt_precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/bt_finalizarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_botao_finalizar_pedido"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:padding="15dp"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="198dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_finalizou_pedido"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/btn_voltaPedidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingVertical="16dp"
            android:text="Voltar"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>